lib/app/drv/ffi/ubuntu/ffi_vega3000.dart


      final bool Function(
              Pointer<CreditParamStruct> crdtParam,
              Pointer<InquiryParamStruct> inqParam,
              Pointer<ConfigStruct> vegaConf) interface =
          vega3000Dylib
              .lookup<
                  NativeFunction<
                      Bool Function(
                          Pointer<CreditParamStruct>,
                          Pointer<InquiryParamStruct>,
                          Pointer<ConfigStruct>)>>("startPlusPosCredit")
              .asFunction();
      //APIコール
      result = interface(crdtParamStruct, inqParamStruct, vegaConfStruct);
      cnvHeaderDataOutPut(crdtParamStruct.ref.header, crdtParam.header);
      cnvSettleResponseOutPut(crdtParamStruct.ref.rSettle, crdtParam.rSettle);
      cnvCreditResponseOutPut(crdtParamStruct.ref.rCredit, crdtParam.rCredit);
      cnvICPrintInfoOutPut(crdtParamStruct.ref.iCPrint, crdtParam.iCPrint);
      cnvHeaderDataOutPut(inqParamStruct.ref.header, inqParam.header);
      cnvCreditResponseOutPut(inqParamStruct.ref.rCredit, inqParam.rCredit);
      cnvInquiryResponseOutPut(inqParamStruct.ref.rInquiry, inqParam.rInquiry);
      cnvExtInquiryResponseOutPut(inqParamStruct.ref.rExtInquiry, inqParam.rExtInquiry);
      cnvConfigOutPut(vegaConfStruct.ref, vegaConf);

      calloc.free(crdtParamStruct);
      calloc.free(inqParamStruct);
      calloc.free(vegaConfStruct);
    } else {
      debugPrint(
          "FFIVega3000.startPlusPosCredit() -- interface() WITHOUT_DEVICE実行");
      result = true;
    }
    return (result);
  }

  /// 関数：plusPosCredit()
  /// 機能：クレジットカード読取 処理実行
  /// 引数：CreditParam crdtParam
  ///     ：Config vegaConf
  /// 戻値：false:サーバとの通信が正常終了しなかった true:サーバとの通信が正常終了
  bool plusPosCredit(CreditParam crdtParam, Config vegaConf) {
    bool result;

    //外部関数（インターフェース）
    if (!isWithoutDevice()) {
      // PlusPosConnector.hに定義してある構造体のサイズ分領域確保
      Pointer<CreditParamStruct> crdtParamStruct = calloc.allocate(creditParamSize);
      Pointer<ConfigStruct> vegaConfStruct = calloc.allocate(configSize);
      cnvCreditParamToStruct(crdtParam, crdtParamStruct);
      cnvConfigToStruct(vegaConf, vegaConfStruct);

      final bool Function(Pointer<CreditParamStruct> crdtParam,
              Pointer<ConfigStruct> vegaConf) interface =
          vega3000Dylib
              .lookup<
                  NativeFunction<
                      Bool Function(Pointer<CreditParamStruct>,
                          Pointer<ConfigStruct>)>>("PlusPosCredit")
              .asFunction();
      //APIコール
      result = interface(crdtParamStruct, vegaConfStruct);
      cnvHeaderDataOutPut(crdtParamStruct.ref.header, crdtParam.header);
      cnvSettleResponseOutPut(crdtParamStruct.ref.rSettle, crdtParam.rSettle);
      cnvCreditResponseOutPut(crdtParamStruct.ref.rCredit, crdtParam.rCredit);
      cnvICPrintInfoOutPut(crdtParamStruct.ref.iCPrint, crdtParam.iCPrint);
      cnvConfigOutPut(vegaConfStruct.ref, vegaConf);

      calloc.free(crdtParamStruct);
      calloc.free(vegaConfStruct);
    } else {
      debugPrint("FFIVega3000.plusPosCredit() -- interface() WITHOUT_DEVICE実行");
      result = true;
    }
    return (result);
  }

  /// 関数：plusPosInquiry()
  /// 機能：クレジットカード問い合わせ 処理実行
  /// 引数：InquiryParam inqParam
  ///     ：Config vegaConf
  /// 戻値：false:サーバとの通信が正常終了しなかった true:サーバとの通信が正常終了
  bool plusPosInquiry(InquiryParam inqParam, Config vegaConf) {
    bool result;

    //外部関数（インターフェース）
    if (!isWithoutDevice()) {
      // PlusPosConnector.hに定義してある構造体のサイズ分領域確保
      Pointer<InquiryParamStruct> inqParamStruct = calloc.allocate(inquiryParamSize);
      Pointer<ConfigStruct> vegaConfStruct = calloc.allocate(configSize);
      cnvInquiryParamToStruct(inqParam, inqParamStruct);
      cnvConfigToStruct(vegaConf, vegaConfStruct);

      final bool Function(Pointer<InquiryParamStruct> inqParam,
              Pointer<ConfigStruct> vegaConf) interface =
          vega3000Dylib
              .lookup<
                  NativeFunction<
                      Bool Function(Pointer<InquiryParamStruct>,
                          Pointer<ConfigStruct>)>>("PlusPosInquiry")
              .asFunction();
      //APIコール
      result = interface(inqParamStruct, vegaConfStruct);
      cnvHeaderDataOutPut(inqParamStruct.ref.header, inqParam.header);
      cnvCreditResponseOutPut(inqParamStruct.ref.rCredit, inqParam.rCredit);
      cnvInquiryResponseOutPut(inqParamStruct.ref.rInquiry, inqParam.rInquiry);
      cnvExtInquiryResponseOutPut(inqParamStruct.ref.rExtInquiry, inqParam.rExtInquiry);
      cnvConfigOutPut(vegaConfStruct.ref, vegaConf);

      calloc.free(inqParamStruct);
      calloc.free(vegaConfStruct);
    } else {
      debugPrint(
          "FFIVega3000.plusPosInquiry() -- interface() WITHOUT_DEVICE実行");
      result = true;
    }
    return (result);
  }

  /// 関数：endPlusPosCredit()
  /// 機能：クレジットカード読取 処理終了
  /// 引数：CreditParam crdtParam
  ///     ：InquiryParam inqParam
  ///     ：Config vegaConf
  /// 戻値：false:端末との通信が正常終了しなかった true:端末との通信が正常終了
  bool endPlusPosCredit(
      CreditParam crdtParam, InquiryParam inqParam, Config vegaConf) {
    bool result;

    //外部関数（インターフェース）
    if (!isWithoutDevice()) {
      // PlusPosConnector.hに定義してある構造体のサイズ分領域確保
      Pointer<CreditParamStruct> crdtParamStruct = calloc.allocate(creditParamSize);
      Pointer<InquiryParamStruct> inqParamStruct = calloc.allocate(inquiryParamSize);
      Pointer<ConfigStruct> vegaConfStruct = calloc.allocate(configSize);
      cnvCreditParamToStruct(crdtParam, crdtParamStruct);
      cnvInquiryParamToStruct(inqParam, inqParamStruct);
      cnvConfigToStruct(vegaConf, vegaConfStruct);

      final bool Function(
              Pointer<CreditParamStruct> crdtParam,
              Pointer<InquiryParamStruct> inqParam,
              Pointer<ConfigStruct> vegaConf) interface =
          vega3000Dylib
              .lookup<
                  NativeFunction<
                      Bool Function(
                          Pointer<CreditParamStruct>,
                          Pointer<InquiryParamStruct>,
                          Pointer<ConfigStruct>)>>("endPlusPosCredit")
              .asFunction();
      //APIコール
      result = interface(crdtParamStruct, inqParamStruct, vegaConfStruct);
      cnvHeaderDataOutPut(crdtParamStruct.ref.header, crdtParam.header);
      cnvSettleResponseOutPut(crdtParamStruct.ref.rSettle, crdtParam.rSettle);
      cnvCreditResponseOutPut(crdtParamStruct.ref.rCredit, crdtParam.rCredit);
      cnvICPrintInfoOutPut(crdtParamStruct.ref.iCPrint, crdtParam.iCPrint);
      cnvHeaderDataOutPut(inqParamStruct.ref.header, inqParam.header);
      cnvCreditResponseOutPut(inqParamStruct.ref.rCredit, inqParam.rCredit);
      cnvInquiryResponseOutPut(inqParamStruct.ref.rInquiry, inqParam.rInquiry);
      cnvExtInquiryResponseOutPut(inqParamStruct.ref.rExtInquiry, inqParam.rExtInquiry);
      cnvConfigOutPut(vegaConfStruct.ref, vegaConf);

      calloc.free(crdtParamStruct);
      calloc.free(inqParamStruct);
      calloc.free(vegaConfStruct);
    } else {
      debugPrint(
          "FFIVega3000.endPlusPosCredit() -- interface() WITHOUT_DEVICE実行");
      result = true;
    }
    return (result);
  }

 // 銀聯
  /// 関数：startPlusPosCup()
  /// 機能：銀聯カード読取 構造体初期化
  /// 引数：CupParam cupParam
  ///     ：Config vegaConf
  /// 戻値：false:初期化、通信が正常終了しなかった true:初期化、通信が正常終了
  bool startPlusPosCup(CupParam cupParam, Config vegaConf) {
    bool result;

    //外部関数（インターフェース）
    if (!isWithoutDevice()) {
      // PlusPosConnector.hに定義してある構造体のサイズ分領域確保
      Pointer<CupParamStruct> cupParamStruct = calloc.allocate(cupParamSize);
      Pointer<ConfigStruct> vegaConfStruct = calloc.allocate(configSize);
      cnvCupParamToStruct(cupParam, cupParamStruct);
      cnvConfigToStruct(vegaConf, vegaConfStruct);

      final bool Function(
              Pointer<CupParamStruct> cupParam, Pointer<ConfigStruct> vegaConf)
          interface = vega3000Dylib
              .lookup<
                  NativeFunction<
                      Bool Function(Pointer<CupParamStruct>,
                          Pointer<ConfigStruct>)>>("startPlusPosCup")
              .asFunction();
      //APIコール
      result = interface(cupParamStruct, vegaConfStruct);
      cnvHeaderDataOutPut(cupParamStruct.ref.header, cupParam.header);
      cnvSettleResponseOutPut(cupParamStruct.ref.rSettle, cupParam.rSettle);
      cnvCreditResponseOutPut(cupParamStruct.ref.rCredit, cupParam.rCredit);
      cnvConfigOutPut(vegaConfStruct.ref, vegaConf);

      calloc.free(cupParamStruct);
      calloc.free(vegaConfStruct);
    } else {
      debugPrint(
          "FFIVega3000.startPlusPosCup() -- interface() WITHOUT_DEVICE実行");
      result = true;
    }
    return (result);
  }

  /// 関数：plusPosCup()
  /// 機能：銀聯カード読取 処理実行
  /// 引数：CupParam cupParam
  ///     ：Config vegaConf
  /// 戻値：false:通信が正常終了しなかった true:通信が正常終了
  bool plusPosCup(CupParam cupParam, Config vegaConf) {
    bool result;

    //外部関数（インターフェース）
    if (!isWithoutDevice()) {
      // PlusPosConnector.hに定義してある構造体のサイズ分領域確保
      Pointer<CupParamStruct> cupParamStruct = calloc.allocate(cupParamSize);
      Pointer<ConfigStruct> vegaConfStruct = calloc.allocate(configSize);
      cnvCupParamToStruct(cupParam, cupParamStruct);
      cnvConfigToStruct(vegaConf, vegaConfStruct);

      final bool Function(
              Pointer<CupParamStruct> cupParam, Pointer<ConfigStruct> vegaConf)
          interface = vega3000Dylib
              .lookup<
                  NativeFunction<
                      Bool Function(Pointer<CupParamStruct>,
                          Pointer<ConfigStruct>)>>("PlusPosCup")
              .asFunction();
      //APIコール
      result = interface(cupParamStruct, vegaConfStruct);
      cnvHeaderDataOutPut(cupParamStruct.ref.header, cupParam.header);
      cnvSettleResponseOutPut(cupParamStruct.ref.rSettle, cupParam.rSettle);
      cnvCreditResponseOutPut(cupParamStruct.ref.rCredit, cupParam.rCredit);
      cnvConfigOutPut(vegaConfStruct.ref, vegaConf);

      calloc.free(cupParamStruct);
      calloc.free(vegaConfStruct);
    } else {
      debugPrint("FFIVega3000.plusPosCup() -- interface() WITHOUT_DEVICE実行");
      result = true;
    }
    return (result);
  }

  /// 関数：endPlusPosCup()
  /// 機能：銀聯カード読取 処理終了
  /// 引数：CupParam cupParam
  ///     ：Config vegaConf
  /// 戻値：false:通信が正常終了しなかった true:通信が正常終了
  bool endPlusPosCup(CupParam cupParam, Config vegaConf) {
    bool result;

    //外部関数（インターフェース）
    if (!isWithoutDevice()) {
      // PlusPosConnector.hに定義してある構造体のサイズ分領域確保
      Pointer<CupParamStruct> cupParamStruct = calloc.allocate(cupParamSize);
      Pointer<ConfigStruct> vegaConfStruct = calloc.allocate(configSize);
      cnvCupParamToStruct(cupParam, cupParamStruct);
      cnvConfigToStruct(vegaConf, vegaConfStruct);

      final bool Function(
              Pointer<CupParamStruct> cupParam, Pointer<ConfigStruct> vegaConf)
          interface = vega3000Dylib
              .lookup<
                  NativeFunction<
                      Bool Function(Pointer<CupParamStruct>,
                          Pointer<ConfigStruct>)>>("endPlusPosCup")
              .asFunction();
      //APIコール
      result = interface(cupParamStruct, vegaConfStruct);
      cnvHeaderDataOutPut(cupParamStruct.ref.header, cupParam.header);
      cnvSettleResponseOutPut(cupParamStruct.ref.rSettle, cupParam.rSettle);
      cnvCreditResponseOutPut(cupParamStruct.ref.rCredit, cupParam.rCredit);
      cnvConfigOutPut(vegaConfStruct.ref, vegaConf);

      calloc.free(cupParamStruct);
      calloc.free(vegaConfStruct);
    } else {
      debugPrint("FFIVega3000.endPlusPosCup() -- interface() WITHOUT_DEVICE実行");
      result = true;
    }
    return (result);
  }

// MSカード
  /// 関数：startPlusPosMsRead()
  /// 機能：MSカード読取 構造体初期化
  /// 引数：PosMsParam msParam
  ///     ：Config vegaConf
  /// 戻値：false:初期化、通信が正常終了しなかった true:初期化、通信が正常終了
  bool startPlusPosMsRead(PosMsParam msParam, Config vegaConf) {
    bool result;
